force-app/main/default/objects/PricebookEntry/fields/Active_Product_Lookup_Formula__c.field-meta.xml
<CustomField>
    <fullName>Active_Product_Lookup_Formula__c</fullName>
    <formula>CurrencyIsoCode__c + Product2.Name +  Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Product Lookup Formula</label>
    <type>Text</type>
</CustomField>