force-app/main/default/objects/PricebookEntry/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <formula>TEXT(Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>