force-app/main/default/objects/PricebookEntry/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <formula>Text(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrencyIsoCode</label>
    <type>Text</type>
</CustomField>