force-app/main/default/objects/PricebookEntry/fields/LS_C_Default__c.field-meta.xml
<CustomField>
    <fullName>LS_C_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS/C Default</label>
    <type>Checkbox</type>
</CustomField>