force-app/main/default/objects/PricebookEntry/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <formula>TEXT ( Product2.Sub_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Division</label>
    <type>Text</type>
</CustomField>