force-app/main/default/objects/PricebookEntry/fields/X9_Default_Items__c.field-meta.xml
<CustomField>
    <fullName>X9_Default_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>9 Default Items?</label>
    <type>Checkbox</type>
</CustomField>