force-app/main/default/objects/PricebookEntry/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PRODUCT.NAME</columns>
    <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT.DEFAULT_PRICE</columns>
    <columns>PRODUCT.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>